<resources>
    <string name="app_name">NWMapp</string>
    <string name="job_listing">Job Listing</string>
    <string name="pending">Pending</string>
    <string name="home">Home</string>
    <string name="incomplete">Incomplete</string>
    <string name="complete">Complete</string>
    <string name="welcome">Welcome</string>
    <string name="todo">Todo</string>
    <string name="doing">Doing</string>
    <string name="assigned_job">Assigned Job</string>
    <string name="unassigned_job">Unassigned Job</string>
    <string name="completed">Completed</string>
    <string name="logout">Logout</string>
    <string name="boon">Boon</string>
    <string name="teck">Teck</string>
    <string name="aizat">Aizat</string>
    <string name="hafiz">Hafiz</string>
    <string name="hamir">Hamir</string>
    <string name="hwa">Hwa</string>
    <string name="iskandar">Iskandar</string>
    <string name="john">John</string>
    <string name="jun_jie">Jun Jie</string>
    <string name="razwill">Razwill</string>
    <string name="sahele">Sahele</string>
    <string name="sazaly">Sazaly</string>
    <string name="faizan">Faizan</string>
    <string name="fauzin">Fauzin</string>
    <string name="izaan">Izaan</string>
    <string name="salam">Salam</string>
    <string name="button">Button</string>
    <string name="job">Job</string>
    <string name="keong">Keong</string>
    <string name="menu_drawer_open">Drawer Open</string>
    <string name="menu_drawer_close">Drawer Close</string>
    <string name="dashboard">Dashboard</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="attendance">Attendance</string>
    <string name="rest_hour">Rest Hour</string>
    <string name="report_off">Report Off</string>
    <string name="log_out">Log Out</string>
    <string name="job_assign">job_assign</string>
    <string name="job_priority">job_priority</string>
    <string name="job_order_number">job_order_number</string>
    <string name="customer_name">customer_name</string>
    <string name="job_description">job_description</string>
    <string name="machine_name">machine_name</string>
    <string name="machine_type">machine_type</string>
    <string name="serialnumber">serialnumber</string>
    <string name="reason">reason</string>
    <string name="Complete">Completed</string>
    <string name="jobregister_id">Completed</string>

</resources>