<?xml version="1.0" encoding="utf-8" ?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/home" />

        <item
            android:id="@+id/attendance"
            android:title="@string/attendance"
            android:icon="@drawable/attendance" />

        <item
            android:id="@+id/resthour"
            android:title="@string/rest_hour"
            android:icon="@drawable/resthour" />

        <item
            android:id="@+id/report_off"
            android:title="@string/report_off"
            android:icon="@drawable/reportoff" />

        <item
            android:id="@+id/assign"
            android:title="@string/assigned_job"
            android:icon="@drawable/assign" />

        <item
            android:id="@+id/unassign"
            android:title="@string/unassigned_job"
            android:icon="@drawable/notassign" />

        <item
            android:id="@+id/pending"
            android:title="@string/pending"
            android:icon="@drawable/pending" />


        <item
            android:id="@+id/incomplete"
            android:title="@string/incomplete"
            android:icon="@drawable/incomplete" />

        <item
            android:id="@+id/complete"
            android:title="@string/completed"
            android:icon="@drawable/completed" />

        <item
            android:id="@+id/logout"
            android:title="@string/logout"
            android:icon="@drawable/logout" />

    </group>

</menu>