<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="@drawable/card_background"
        app:cardCornerRadius="8dp"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/PendingJobRegister_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/pendingJob_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/job_priority" />

        <TextView
            android:id="@+id/pendingJob_order_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:text="@string/job_order_number" />

        <TextView
            android:id="@+id/pendingCustomer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:text="@string/customer_name" />

        <TextView
            android:id="@+id/pendingJob_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="58dp"
            android:text="@string/job_description" />

        <TextView
            android:id="@+id/pendingMachine_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="77dp"
            android:text="@string/machine_name" />

        <TextView
            android:id="@+id/pendingMachine_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:text="@string/machine_type" />

        <TextView
            android:id="@+id/pendingSerialnumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="115dp"
            android:text="@string/serialnumber" />

        <TextView
            android:id="@+id/pendingReason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="115dp"
            android:text="@string/reason" />

        <TextView
            android:id="@+id/pendingJob_assign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="310dp"
            android:layout_marginTop="158dp"
            android:text="@string/job_assign" />

    </androidx.cardview.widget.CardView>
</LinearLayout>