<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.AssignedJobFragment">

    <RelativeLayout
        android:id="@+id/relativelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="65dp">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            app:menu="@menu/top_bar"
            app:navigationIcon="@drawable/clockin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="25sp" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="wrap_content"
                android:layout_height="5dp"
                android:layout_marginTop="120dp"
                android:background="#D30000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#EDEDED"
                android:text="@string/todo"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"

                />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvTodo"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:background="@drawable/card_background"
                app:cardCornerRadius="8dp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="5dp"
                android:background="#D30000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#EDEDED"
                android:text="@string/doing"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"

                />
            <androidx.cardview.widget.CardView
                android:id="@+id/cvDoing"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:background="@drawable/card_background"
                app:cardCornerRadius="8dp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="5dp"
                android:background="#FF5722" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#EDEDED"
                android:text="@string/pending"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"

                />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="170dp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="5dp"
                android:background="#673AB7" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#EDEDED"
                android:text="@string/completed"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"

                />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="170dp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>